Send quadrilateral lat-long next order is fixed

--- a/app/src/main/res/layout/lat_long_picker.xml
+++ b/app/src/main/res/layout/lat_long_picker.xml
@@ -24,6 +24,7 @@
       android:layout_weight="3"
       android:hint="@string/lat_long_picker_lat_hint"
       android:inputType="numberDecimal"
+      android:nextFocusDown="@+id/lat_long_picker_long"
       android:textAlignment="center"
       />
 
