--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -4,11 +4,11 @@
 
     <header
         android:fragment="com.teamagam.gimelgimel.app.settings.SettingsActivity$GeneralPreferenceFragment"
-        android:title="@string/pref_header_general"
-        android:icon="@drawable/ic_info_black_24dp" />
+        android:icon="@drawable/ic_info_black_24dp"
+        android:title="@string/pref_header_general"/>
 
     <header
         android:fragment="com.teamagam.gimelgimel.app.settings.SettingsActivity$NotificationPreferenceFragment"
-        android:title="@string/pref_header_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp" />
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/pref_notifications_header_title"/>
 </preference-headers>
