Removed used classes. Refactor packages hierarchy for map and alerts.

--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -39,7 +39,7 @@
 
       <fragment
           android:id="@+id/viewer_layout"
-          android:name="com.teamagam.gimelgimel.app.map.view.ViewerFragment"
+          android:name="com.teamagam.gimelgimel.app.map.main.ViewerFragment"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           tools:ignore="MergeRootFrame"
