--- a/app/src/main/res/layout/fragment_measure_action.xml
+++ b/app/src/main/res/layout/fragment_measure_action.xml
@@ -7,7 +7,7 @@
 
     <variable
         name="viewModel"
-        type="com.teamagam.gimelgimel.app.map.viewModel.MeasureActionViewModel"
+        type="com.teamagam.gimelgimel.app.map.actions.measure.MeasureActionViewModel"
         />
   </data>
 
