--- a/app/src/main/res/layout/fragment_viewer.xml
+++ b/app/src/main/res/layout/fragment_viewer.xml
@@ -4,7 +4,7 @@
 
     <variable
         name="viewModel"
-        type="com.teamagam.gimelgimel.app.map.viewModel.MapViewModel"
+        type="com.teamagam.gimelgimel.app.map.main.ViewerViewModel"
         />
   </data>
 
@@ -12,7 +12,7 @@
       android:id="@+id/viewer_layout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      tools:context=".app.map.view.ViewerFragment"
+      tools:context=".app.map.main.ViewerFragment"
       >
 
     <com.teamagam.gimelgimel.app.map.esri.EsriGGMapView
