--- a/app/src/main/res/layout/fragment_send_geometry.xml
+++ b/app/src/main/res/layout/fragment_send_geometry.xml
@@ -21,31 +21,74 @@
         android:padding="@dimen/spacing_normal"
         >
 
-      <android.support.v7.widget.AppCompatImageView
-          android:layout_width="@dimen/image_button_dimension_big"
-          android:layout_height="@dimen/image_button_dimension_big"
-          android:padding="@dimen/spacing_small"
-          app:srcCompat="@drawable/ic_polyline"
-          />
-
-      <android.support.v7.widget.SwitchCompat
-          android:id="@+id/send_geometry_switch"
+      <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:onCheckedChanged="@{(switch,checked) -> viewModel.onSwitchChanged(checked)}"
-          />
+          android:orientation="vertical"
+          >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+          <android.support.v7.widget.AppCompatImageView
+              android:layout_width="@dimen/image_button_dimension_big"
+              android:layout_height="@dimen/image_button_dimension_big"
+              android:padding="@dimen/spacing_small"
+              app:srcCompat="@drawable/ic_polyline"
+              />
 
-      <android.support.v7.widget.AppCompatImageView
-          android:layout_width="@dimen/image_button_dimension_big"
-          android:layout_height="@dimen/image_button_dimension_big"
-          android:padding="@dimen/spacing_small"
-          app:srcCompat="@drawable/ic_polygon"
-          />
+          <android.support.v7.widget.SwitchCompat
+              android:id="@+id/send_geometry_switch"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center"
+              android:onCheckedChanged="@{(switch,checked) -> viewModel.onSwitchChanged(checked)}"
+              />
+
+          <android.support.v7.widget.AppCompatImageView
+              android:layout_width="@dimen/image_button_dimension_big"
+              android:layout_height="@dimen/image_button_dimension_big"
+              android:padding="@dimen/spacing_small"
+              app:srcCompat="@drawable/ic_polygon"
+              />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+          <android.support.v7.widget.AppCompatImageButton
+              android:layout_width="@dimen/image_button_dimension_big"
+              android:layout_height="@dimen/image_button_dimension_big"
+              android:onClick="@{(v) -> viewModel.onBorderStyleSelect()}"
+              android:padding="@dimen/spacing_small"
+              app:srcCompat="@drawable/ic_polyline"
+              />
+
+          <android.support.v7.widget.AppCompatImageButton
+              android:layout_width="@dimen/image_button_dimension_big"
+              android:layout_height="@dimen/image_button_dimension_big"
+              android:onClick="@{(v) -> viewModel.onBorderColorSelect()}"
+              android:padding="@dimen/spacing_small"
+              app:srcCompat="@drawable/ic_polyline"
+              />
+
+          <android.support.v7.widget.AppCompatImageButton
+              android:layout_width="@dimen/image_button_dimension_big"
+              android:layout_height="@dimen/image_button_dimension_big"
+              android:clickable="false"
+              android:onClick="@{(v) -> viewModel.onFillColorSelect()}"
+              android:padding="@dimen/spacing_small"
+              app:srcCompat="@drawable/ic_polyline"
+              />
+        </LinearLayout>
+      </LinearLayout>
 
       <EditText
           android:id="@+id/send_geometry_description_edit_text"
           android:layout_width="0dp"
-          android:layout_height="wrap_content"
+          android:layout_height="match_parent"
           android:layout_weight="1"
           android:hint="@string/add_description"
           android:maxLines="3"
