--- a/app/src/main/res/layout/fragment_send_geometry.xml
+++ b/app/src/main/res/layout/fragment_send_geometry.xml
@@ -58,29 +58,34 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
-          <android.support.v7.widget.AppCompatImageButton
+          <android.support.v7.widget.AppCompatImageView
+              android:id="@+id/border_style_picker"
               android:layout_width="@dimen/image_button_dimension_big"
               android:layout_height="@dimen/image_button_dimension_big"
               android:onClick="@{(v) -> viewModel.onBorderStyleSelect()}"
               android:padding="@dimen/spacing_small"
-              app:srcCompat="@drawable/ic_polyline"
+              app:srcCompat="@drawable/ic_border_style"
               />
 
-          <android.support.v7.widget.AppCompatImageButton
+          <android.support.v7.widget.AppCompatImageView
+              android:id="@+id/border_color_picker"
               android:layout_width="@dimen/image_button_dimension_big"
               android:layout_height="@dimen/image_button_dimension_big"
               android:onClick="@{(v) -> viewModel.onBorderColorSelect()}"
               android:padding="@dimen/spacing_small"
-              app:srcCompat="@drawable/ic_polyline"
+              android:tint="@{viewModel.borderColor}"
+              app:srcCompat="@drawable/ic_color_border"
               />
 
-          <android.support.v7.widget.AppCompatImageButton
+          <android.support.v7.widget.AppCompatImageView
+              android:id="@+id/fill_color_picker"
               android:layout_width="@dimen/image_button_dimension_big"
               android:layout_height="@dimen/image_button_dimension_big"
               android:clickable="false"
               android:onClick="@{(v) -> viewModel.onFillColorSelect()}"
               android:padding="@dimen/spacing_small"
-              app:srcCompat="@drawable/ic_polyline"
+              android:tint="@{viewModel.fillColor}"
+              app:srcCompat="@drawable/ic_color_fill"
               />
         </LinearLayout>
       </LinearLayout>
