Added icons to dialog spinner

--- a/app/src/main/res/layout/dialog_send_geo_message.xml
+++ b/app/src/main/res/layout/dialog_send_geo_message.xml
@@ -50,6 +50,7 @@
           />
 
       <Spinner
+          android:id="@+id/spinner_types"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end|center"
