Starting dynamic layer editing action when clicking boom-menu's button. Showing an instructional toast on action start. Stopped action fragments from showing soft keyboard when it starts.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
   <color name="gray_light">#DFDFDF</color>
   <color name="gray_dark">#5F5F5F</color>
   <color name="black">#303030</color>
+  <color name="semi_transparent_gray">#885F5F5F</color>
 
   <!-- Basic colors -->
   <color name="green">#27D34D</color>
