--- a/app/src/main/res/layout/fragment_free_draw.xml
+++ b/app/src/main/res/layout/fragment_free_draw.xml
@@ -5,7 +5,7 @@
   <data>
     <variable
         name="viewModel"
-        type="com.teamagam.gimelgimel.app.map.actions.send.battle.DynamicLayerEditViewModel"
+        type="com.teamagam.gimelgimel.app.map.actions.freedraw.FreedrawViewModel"
         />
   </data>
 
