--- a/app/src/main/res/layout/fragment_free_draw.xml
+++ b/app/src/main/res/layout/fragment_free_draw.xml
@@ -23,24 +23,30 @@
         >
 
       <android.support.v7.widget.AppCompatImageView
-          android:id="@+id/send_geometry_undo_image"
+          android:id="@+id/free_draw_undo_image"
           android:layout_width="@dimen/image_button_dimension_medium"
           android:layout_height="@dimen/image_button_dimension_medium"
           android:onClick="@{() -> viewModel.onUndoClicked()}"
           app:srcCompat="@drawable/ic_undo"
           />
 
-      <EditText
-          android:id="@+id/send_geometry_description_edit_text"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:hint="@string/add_description"
-          android:maxLines="3"
-          android:text="@={viewModel.description}"
-          android:textSize="@dimen/text_size_medium"
+      <android.support.v7.widget.AppCompatImageView
+          android:id="@+id/free_draw_eraser_image"
+          android:layout_width="@dimen/image_button_dimension_medium"
+          android:layout_height="@dimen/image_button_dimension_medium"
+          android:layout_marginEnd="@dimen/spacing_small"
+          android:layout_marginStart="@dimen/spacing_small"
+          android:onClick="@{() -> viewModel.onEraserClicked()}"
+          app:srcCompat="@drawable/ic_eraser"
           />
 
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:gravity="center"
+          android:onClick="@{() -> viewModel.onColorPickerClicked()}"
+          android:text="color picker stub"
+          />
     </LinearLayout>
 
     <FrameLayout
@@ -49,50 +55,11 @@
         android:layout_weight="1"
         >
       <com.teamagam.gimelgimel.app.map.esri.EsriGGMapView
-          android:id="@+id/dynamic_layer_edit_map"
+          android:id="@+id/free_draw_map"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           />
-      <android.support.design.widget.FloatingActionButton
-          android:id="@+id/send_geometry_send_fab"
-          android:layout_gravity="bottom|end"
-          android:onClick="@{() -> viewModel.onSendFabClicked()}"
-          android:src="@android:drawable/ic_menu_send"
-          style="@style/fab"
-          />
     </FrameLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        >
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="Draw point"
-          />
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="Draw polyline"
-          />
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="Draw polygon"
-          />
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="Make magic"
-          />
-    </LinearLayout>
 
   </LinearLayout>
 
