Free draw action action setup with boomenu and instructional toast (#346)
* Removed used classes.
Refactor packages hierarchy for map and alerts.

* Refactored navigator to hold activity.
Added boom menu button for dynamic layers.

* Starting dynamic layer editing action when clicking boom-menu's button.
Showing an instructional toast on action start.
Stopped action fragments from showing soft keyboard when it starts.

* Changing names from dynamic layer to free-drawing

* CR fixes-
1. Initializing map viewmodel to display entities
2. Removed unnecessary views from free draw view (and their view-model corresponding methods)
3. Added two stub view for free draw (and their view-model corresponding methods)
4. removed unused strings from hebrew string resource file

--- a/app/src/main/res/layout/fragment_send_geometry.xml
+++ b/app/src/main/res/layout/fragment_send_geometry.xml
@@ -4,7 +4,7 @@
   <data>
     <variable
         name="viewModel"
-        type="com.teamagam.gimelgimel.app.map.viewModel.SendGeometryViewModel"
+        type="com.teamagam.gimelgimel.app.map.actions.send.geometry.SendGeometryViewModel"
         />
   </data>
 
@@ -101,7 +101,7 @@
           />
 
       <android.support.v7.widget.AppCompatImageView
-          android:id="@+id/send_geometry_undo_image"
+          android:id="@+id/free_draw_undo_image"
           android:layout_width="@dimen/image_button_dimension_medium"
           android:layout_height="@dimen/image_button_dimension_medium"
           android:onClick="@{() -> viewModel.onUndoClicked()}"
