--- a/app/src/main/res/layout/activity_action_draw.xml
+++ b/app/src/main/res/layout/activity_action_draw.xml
@@ -11,6 +11,8 @@
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:background="?attr/colorPrimary"
+      android:fitsSystemWindows="false"
+      android:clipToPadding="true"
       android:elevation="4dp"
       android:theme="@style/LightToolbar"
       app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
