Added styling support to all of the geometries
Extracted base fragment for drawing styled geometries on map

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,5 +32,6 @@
   <!--Image buttons dimensions -->
   <dimen name="image_button_dimension_medium">36dp</dimen>
   <dimen name="image_button_dimension_big">48dp</dimen>
+  <dimen name="geometry_style_bar_height">74dp</dimen>
 
 </resources>
