--- a/app/src/main/res/layout/fragment_dynamic_layer_action.xml
+++ b/app/src/main/res/layout/fragment_dynamic_layer_action.xml
@@ -14,7 +14,53 @@
       android:layout_height="match_parent"
       android:orientation="vertical"
       >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/geometry_style_bar_height"
+        android:padding="@dimen/spacing_normal"
+        >
+      <android.support.v7.widget.AppCompatImageView
+          android:id="@+id/border_style_picker"
+          android:layout_width="@dimen/image_button_dimension_big"
+          android:layout_height="@dimen/image_button_dimension_big"
+          android:onClick="@{(v) -> viewModel.onBorderStyleClick()}"
+          android:padding="@dimen/spacing_small"
+          android:visibility="@{viewModel.borderStyleVisibility}"
+          app:srcCompat="@drawable/ic_border_style"
+          />
 
+      <android.support.v7.widget.AppCompatImageView
+          android:id="@+id/border_color_picker"
+          android:layout_width="@dimen/image_button_dimension_big"
+          android:layout_height="@dimen/image_button_dimension_big"
+          android:onClick="@{(v) -> viewModel.onBorderColorClick()}"
+          android:padding="@dimen/spacing_small"
+          android:tint="@{viewModel.borderColor}"
+          android:visibility="@{viewModel.borderColorVisibility}"
+          app:srcCompat="@drawable/ic_color_border"
+          />
+
+      <android.support.v7.widget.AppCompatImageView
+          android:id="@+id/fill_color_picker"
+          android:layout_width="@dimen/image_button_dimension_big"
+          android:layout_height="@dimen/image_button_dimension_big"
+          android:onClick="@{(v) -> viewModel.onFillColorClick()}"
+          android:padding="@dimen/spacing_small"
+          android:tint="@{viewModel.fillColor}"
+          android:visibility="@{viewModel.fillColorVisibility}"
+          app:srcCompat="@drawable/ic_color_fill"
+          />
+      <Spinner
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="end|center"
+          android:entries="@{viewModel.types}"
+          android:padding="@dimen/spacing_small"
+          android:selectedItemPosition="@={viewModel.typeIdx}"
+          android:spinnerMode="dialog"
+          android:visibility="@{viewModel.iconPickerVisibility}"
+          />
+    </LinearLayout>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -40,7 +86,6 @@
         android:id="@+id/bottombar_geometry_type"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-
         app:bb_activeTabColor="@color/white"
         app:bb_inActiveTabAlpha="50"
         app:bb_showShadow="true"
