--- a/app/src/main/res/xml/dynamiclayer_bottombar_tabs.xml
+++ b/app/src/main/res/xml/dynamiclayer_bottombar_tabs.xml
@@ -1,18 +1,23 @@
 <tabs>
   <tab
-      barColorWhenSelected="#303F9F"
+      barColorWhenSelected="@color/themeBlue"
       icon="@drawable/ic_polyline"
       id="@+id/tab_polyline"
       title="@string/polyline"
       />
   <tab
-      barColorWhenSelected="#FF9800"
+      barColorWhenSelected="@color/themeTeal"
       icon="@drawable/ic_polygon"
       id="@+id/tab_polygon"
       title="@string/polygon"/>
   <tab
-      barColorWhenSelected="#AFB42B"
+      barColorWhenSelected="@color/themeGray"
       icon="@drawable/ic_flare"
       id="@+id/tab_point"
       title="@string/point"/>
+  <tab
+      barColorWhenSelected="@color/themeRed"
+      icon="@drawable/ic_delete"
+      id="@+id/tab_remove"
+      title="Remove Entity"/>
 </tabs>
