Fixed sending bug

--- a/app/src/main/res/layout/fragment_dynamic_layer_action.xml
+++ b/app/src/main/res/layout/fragment_dynamic_layer_action.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/geometry_style_bar_height"
         android:padding="@dimen/spacing_normal"
+        android:visibility="@{viewModel.panelVisibility}"
         >
       <android.support.v7.widget.AppCompatImageView
           android:id="@+id/border_style_picker"
@@ -89,8 +90,8 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         app:bb_activeTabColor="@color/white"
-        app:bb_inActiveTabColor="@color/black"
         app:bb_inActiveTabAlpha="50"
+        app:bb_inActiveTabColor="@color/black"
         app:bb_showShadow="true"
         app:bb_tabXmlResource="@xml/dynamiclayer_bottombar_tabs"
         />
