--- a/app/src/main/res/xml/dynamiclayer_bottombar_tabs.xml
+++ b/app/src/main/res/xml/dynamiclayer_bottombar_tabs.xml
@@ -1,19 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
 <tabs>
   <tab
       barColorWhenSelected="#303F9F"
       icon="@drawable/ic_polyline"
       id="@+id/tab_polyline"
-      title="Polyline"
+      title="@string/polyline"
       />
   <tab
       barColorWhenSelected="#FF9800"
       icon="@drawable/ic_polygon"
       id="@+id/tab_polygon"
-      title="Polygon"/>
+      title="@string/polygon"/>
   <tab
       barColorWhenSelected="#AFB42B"
       icon="@drawable/ic_flare"
       id="@+id/tab_point"
-      title="Point"/>
+      title="@string/point"/>
 </tabs>
