--- a/app/src/main/res/layout/fragment_dynamic_layer_action.xml
+++ b/app/src/main/res/layout/fragment_dynamic_layer_action.xml
@@ -7,6 +7,7 @@
         name="viewModel"
         type="com.teamagam.gimelgimel.app.map.viewModel.DynamicLayerEditViewModel"
         />
+    <import type="android.view.View"/>
   </data>
 
   <LinearLayout
@@ -54,9 +55,9 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end|center"
-          android:entries="@{viewModel.types}"
+          android:entries="@{viewModel.iconNames}"
           android:padding="@dimen/spacing_small"
-          android:selectedItemPosition="@={viewModel.typeIdx}"
+          android:selectedItemPosition="@={viewModel.IconIdx}"
           android:spinnerMode="dialog"
           android:visibility="@{viewModel.iconPickerVisibility}"
           />
@@ -74,10 +75,11 @@
           />
 
       <android.support.design.widget.FloatingActionButton
-          android:id="@+id/measure_plus_fab"
+          android:id="@+id/dynamic_layer_edit_fab"
           android:layout_gravity="end|bottom"
           android:clickable="true"
-          android:onClick="@{() -> viewModel.saveCurrentGeometry()}"
+          android:onClick="@{() -> viewModel.sendCurrentGeometry()}"
+          android:visibility="@{viewModel.onEditMode ? View.VISIBLE : View.GONE}"
           app:srcCompat="@drawable/ic_check_white_24dp"
           style="@style/fab"
           />
