--- a/app/src/main/res/layout/fragment_send_geometry.xml
+++ b/app/src/main/res/layout/fragment_send_geometry.xml
@@ -4,7 +4,7 @@
   <data>
     <variable
         name="viewModel"
-        type="com.teamagam.gimelgimel.app.map.actions.send.geometry.SendGeometryViewModel"
+        type="com.teamagam.gimelgimel.app.map.viewModel.SendGeometryViewModel"
         />
   </data>
 
