--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -35,4 +35,7 @@
   <dimen name="image_button_dimension_big">48dp</dimen>
   <dimen name="geometry_style_bar_height">74dp</dimen>
 
+  <dimen name="timeplay_bottom_panel_height">80dp</dimen>
+  <dimen name="timeplay_date_field_height">40dp</dimen>
+
 </resources>
