--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,5 +37,6 @@
 
   <dimen name="timeplay_bottom_panel_height">80dp</dimen>
   <dimen name="timeplay_date_field_height">40dp</dimen>
+  <dimen name="icon_selection_image_size">40dp</dimen>
 
 </resources>
