--- a/app/src/main/res/layout/dialog_icon_selection_item.xml
+++ b/app/src/main/res/layout/dialog_icon_selection_item.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dialog_icon_grid_item_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/spacing_extra_small"
