--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -15,6 +15,7 @@
       android:padding="2dp"
       android:textColor="@color/colorPrimaryDark"
       android:textSize="@dimen/text_size_medium"
+      android:textStyle="bold"
       tools:text="עברית"
       />
 
