--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,6 +67,7 @@
   <color name="alert_fill_color">@color/md_red_500</color>
   <color name="active_user_color">@color/md_indigo_500</color>
   <color name="stale_user_color">@color/md_grey_500</color>
+  <color name="user_background_color">@color/white</color>
 
   <array name="icon_colors">
     <item>@color/md_red_500</item>
