--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -68,6 +68,13 @@
         app:pstsUnderlineColor="@color/black"
         />
 
+    <Button
+        android:id="@+id/button_id"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:background="@drawable/ic_search_black_24dp"
+        />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/bottom_swiping_panel"
         android:layout_width="match_parent"
