--- a/app/src/main/res/layout/activity_main_drawer.xml
+++ b/app/src/main/res/layout/activity_main_drawer.xml
@@ -45,7 +45,7 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:visibility="@{viewModel.usersDisplayed ? View.VISIBLE : View.GONE}"
-          tools:listitem="@layout/drawer_list_item"
+          tools:listitem="@layout/drawer_user_item_name"
           />
 
       <FrameLayout
@@ -66,7 +66,7 @@
         app:ntb_swiped="true"
         app:ntb_tinted="true"
         app:ntb_title_mode="active"
-        app:ntb_title_size="@dimen/text_size_small"
+        app:ntb_title_size="@dimen/text_size_extra_small"
         app:ntb_titled="true"
         />
 
