--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,7 +23,8 @@
   <dimen name="image_preview_size">180dp</dimen>
   <dimen name="geo_panel_icon_size">35dp</dimen>
   <dimen name="message_content_minimum_width">200dp</dimen>
-  <dimen name="text_size_small">10sp</dimen>
+  <dimen name="text_size_extra_small">10sp</dimen>
+  <dimen name="text_size_small">15sp</dimen>
   <dimen name="text_size_medium">20sp</dimen>
   <dimen name="text_size_large">30sp</dimen>
   <dimen name="measure_cross_size">24dp</dimen>
