Drawer layer's menu ui changes

--- a/app/src/main/res/layout/activity_main_drawer.xml
+++ b/app/src/main/res/layout/activity_main_drawer.xml
@@ -13,7 +13,7 @@
   </data>
   <LinearLayout
       android:id="@+id/drawer_content_layout"
-      android:layout_width="300dp"
+      android:layout_width="@dimen/main_drawer_width"
       android:layout_height="match_parent"
       android:layout_gravity="start"
       android:orientation="vertical"
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/slide_panel_background_primary"
+        android:background="@color/drawer_content_background"
         >
       <android.support.v7.widget.RecyclerView
           android:id="@+id/drawer_content_recycler"
