--- a/app/src/main/res/drawable/ic_folder.xml
+++ b/app/src/main/res/drawable/ic_folder.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24.0"
     android:width="24dp">
   <path
-      android:fillColor="#000000"
-      android:pathData="M7.41,7.84L12,12.42l4.59,-4.58L18,9.25l-6,6 -6,-6z"/>
+      android:fillColor="#FF000000"
+      android:pathData="M10,4H4C2.89,4 2,4.89 2,6V18A2,2 0,0 0,4 20H20A2,2 0,0 0,22 18V8C22,6.89 21.1,6 20,6H12L10,4Z"/>
 </vector>
