--- a/app/src/main/res/layout/drawer_layers_node_view.xml
+++ b/app/src/main/res/layout/drawer_layers_node_view.xml
@@ -1,40 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="36dp"
+    android:layout_width="@dimen/drawer_layer_item_width"
+    android:layout_height="@dimen/drawer_layer_item_height"
     android:layout_margin="@dimen/spacing_extra_small"
+    android:orientation="horizontal"
     >
 
   <android.support.v7.widget.AppCompatImageView
       android:id="@+id/drawer_layer_node_expand_icon"
       android:layout_width="@dimen/image_button_dimension_medium"
       android:layout_height="@dimen/image_button_dimension_medium"
-      tools:src="@drawable/ic_down_arrow"
+      tools:src="@drawable/ic_folder"
       />
 
-  <me.grantland.widget.AutofitTextView
-      android:id="@+id/drawer_layer_node_title"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_marginEnd="@dimen/image_button_dimension_medium"
-      android:layout_marginStart="@dimen/image_button_dimension_medium"
-      android:gravity="center_vertical"
-      android:paddingEnd="@dimen/spacing_small"
-      android:paddingStart="@dimen/spacing_small"
-      android:textSize="@dimen/text_size_medium"
-      tools:text="Sample text"
+  <android.support.v7.widget.AppCompatImageView
+      android:id="@+id/drawer_layer_node_expand_visibility"
+      android:layout_width="@dimen/image_button_dimension_medium"
+      android:layout_height="@dimen/image_button_dimension_medium"
+      android:padding="@dimen/spacing_small"
+      tools:src="@drawable/ic_visibility_on"
       />
+
+
+  <FrameLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_margin="0dp"
+      android:layout_weight="1"
+      android:padding="0dp"
+      >
+    <me.grantland.widget.AutofitTextView
+        android:id="@+id/drawer_layer_node_title"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:paddingEnd="@dimen/spacing_small"
+        android:paddingStart="@dimen/spacing_small"
+        android:textSize="@dimen/text_size_medium"
+        tools:text="Sample text"
+        />
+  </FrameLayout>
 
   <android.support.v7.widget.AppCompatImageView
       android:id="@+id/drawer_layer_node_icon"
       android:layout_width="@dimen/image_button_dimension_medium"
       android:layout_height="@dimen/image_button_dimension_medium"
-      android:layout_gravity="end"
-      android:gravity="center_vertical"
+      android:padding="@dimen/spacing_small"
       tools:src="@drawable/ic_plus"
       tools:tint="@color/black"
       />
-
-
-</FrameLayout>
+</LinearLayout>
