--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,5 +38,9 @@
 
   <dimen name="timeplay_bottom_panel_height">80dp</dimen>
   <dimen name="timeplay_date_field_height">40dp</dimen>
+  <dimen name="main_drawer_width">300dp</dimen>
+  <dimen name="drawer_layer_item_width">@dimen/main_drawer_width</dimen>
+  <dimen name="drawer_layer_item_height">36dp</dimen>
+
 
 </resources>
