--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,6 +44,10 @@
 
   <!--Drawer-->
   <color name="drawer_content_background">@color/slide_panel_background_primary</color>
+  <color name="drawer_layers_folder">@color/colorPrimaryDark</color>
+  <color name="drawer_layers_visibility">@color/colorPrimaryDark</color>
+  <color name="drawer_layers_edit">@color/colorPrimary</color>
+  <color name="drawer_layers_add">@color/colorPrimary</color>
 
   <!--List items background colors-->
   <color name="selected_list_item">#B1EDE8</color>
